@startuml
skinparam linetype ortho

package "Things we own" {
entity Course {
  e.g. an accredited programme
  --
  * id: uuid
  * name: text
  * description: text
  * coursePrerequisites: CoursePrerequisite[]
  * audiences: text[] (e.g. for which types of offence the course is suitable)
}

entity CoursePrerequisite {
  Prerequisite for enrolling in the programme.
  e.g. risk score, offence type, gender, setting
  --
  * name: text
  * description: text
  * course: Course
}

entity CourseOffering {
  * id: uuid
  * course: Course
  * organisation: Organisation
  * contactEmail: text
}

entity Referral {
  * id: uuid
  * person: Person
  * offering: CourseOffering
  * referrer: StaffMember
  * status: text
  * createdAt: Date
}

entity Permission {
  * staffMemberId: text
  * role: text
}
}

entity Organisation {
  e.g. A Prison
  --
  * name: text
  * category: text
  * address: Address
  * email: text
}

entity Address {
 * addressLine1: text
   addressLine2: text
 * town: text
 * county: text
 * postCode: text
 * country: text
}

entity Person {
  e.g. A person in prison/on probation.
  Identifer used to fetch details from other services
  --
  * identifier: text (e.g. NOMIS number)
  --cached--
  name: text
  riskScores: JSON
  releaseDate: Date
}

entity StaffMember {
  e.g. A POM, COM
  --
  * id: uuid
  * identifier: text (e.g. HMPPS Auth ID)
  * permissions: Permission[]
}


CourseOffering }o--|| Course
CourseOffering }o--|| Organisation

Course }o--|| CoursePrerequisite

Referral }o--|| StaffMember
Referral }o--|| CourseOffering
Referral }o--|| Person

StaffMember }|--o{ Permission

Organisation ||--|| Address

@enduml
